--- a/Faveo Helpdesk Pro/Base.lproj/Main.storyboard
+++ b/Faveo Helpdesk Pro/Base.lproj/Main.storyboard
@@ -5,7 +5,7 @@
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13173"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13174"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -1661,7 +1661,7 @@
                                         <rect key="frame" x="0.0" y="0.0" width="320" height="580"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Faveo HELPDESK" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZIG-RQ-ubz">
-                                                <rect key="frame" x="96.666666666666657" y="35" width="123.99999999999997" height="18"/>
+                                                <rect key="frame" x="96.666666666666686" y="35" width="124" height="18"/>
                                                 <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="15"/>
                                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <nil key="highlightedColor"/>
@@ -2786,7 +2786,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="80" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="cTu-f4-cRs">
-                                <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                                <rect key="frame" x="0.0" y="33" width="414" height="709"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" rowHeight="80" id="cqe-JL-E9K">
@@ -2807,9 +2807,9 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="cTu-f4-cRs" firstAttribute="leading" secondItem="8po-9a-tJV" secondAttribute="leading" id="0wh-Dj-9bf"/>
-                            <constraint firstItem="fpC-nw-NfT" firstAttribute="top" secondItem="cTu-f4-cRs" secondAttribute="bottom" id="5OG-g8-MOn"/>
+                            <constraint firstItem="fpC-nw-NfT" firstAttribute="top" secondItem="cTu-f4-cRs" secondAttribute="bottom" constant="-6" id="5OG-g8-MOn"/>
                             <constraint firstAttribute="trailing" secondItem="cTu-f4-cRs" secondAttribute="trailing" id="P3S-Tj-6Lf"/>
-                            <constraint firstItem="cTu-f4-cRs" firstAttribute="top" secondItem="8po-9a-tJV" secondAttribute="top" id="qGc-kR-F7A"/>
+                            <constraint firstItem="cTu-f4-cRs" firstAttribute="top" secondItem="8po-9a-tJV" secondAttribute="top" constant="33" id="qGc-kR-F7A"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="Jrm-Xj-SBf"/>
@@ -2819,7 +2819,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="M1Q-gG-X3l" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1022" y="-482"/>
+            <point key="canvasLocation" x="1021.7391304347827" y="-482.60869565217394"/>
         </scene>
         <!--Login View Controller-->
         <scene sceneID="ixL-dE-3ns">
