--- a/Faveo Helpdesk Pro/Base.lproj/Main.storyboard
+++ b/Faveo Helpdesk Pro/Base.lproj/Main.storyboard
@@ -4060,6 +4060,54 @@
             </objects>
             <point key="canvasLocation" x="-407" y="406"/>
         </scene>
+        <!--Sorting View Controller-->
+        <scene sceneID="IBg-q5-reO">
+            <objects>
+                <viewController storyboardIdentifier="sortID" id="U7W-l8-Upg" customClass="SortingViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="H71-8h-Zqw"/>
+                        <viewControllerLayoutGuide type="bottom" id="F9e-Hc-wwD"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="AGT-mA-73e">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="80" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="18h-LM-33M">
+                                <rect key="frame" x="0.0" y="33" width="414" height="709"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" rowHeight="80" id="Eu4-eB-Iov">
+                                        <rect key="frame" x="0.0" y="28" width="414" height="80"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Eu4-eB-Iov" id="70Y-Z0-xQl">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="79.666666666666671"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="U7W-l8-Upg" id="bzU-Fd-7cO"/>
+                                    <outlet property="delegate" destination="U7W-l8-Upg" id="054-UG-V46"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="18h-LM-33M" firstAttribute="leading" secondItem="AGT-mA-73e" secondAttribute="leading" id="WTN-Sm-DaE"/>
+                            <constraint firstAttribute="trailing" secondItem="18h-LM-33M" secondAttribute="trailing" id="aIx-8c-2ej"/>
+                            <constraint firstItem="18h-LM-33M" firstAttribute="top" secondItem="AGT-mA-73e" secondAttribute="top" constant="33" id="pPx-rh-fCI"/>
+                            <constraint firstItem="F9e-Hc-wwD" firstAttribute="top" secondItem="18h-LM-33M" secondAttribute="bottom" constant="-6" id="rRB-mB-MUo"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="JbI-5o-aSP"/>
+                    <connections>
+                        <outlet property="tableView" destination="18h-LM-33M" id="EQq-HI-kfd"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Tor-fR-c38" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1228" y="-482"/>
+        </scene>
     </scenes>
     <resources>
         <image name="AddCC" width="60" height="60"/>
