--- a/Faveo Helpdesk Pro/TicketTableViewCell.xib
+++ b/Faveo Helpdesk Pro/TicketTableViewCell.xib
@@ -42,13 +42,13 @@
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ashfaque.hussian@eigroup.co.in" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1m9-rL-BBc">
-                                <rect key="frame" x="66" y="76" width="158" height="18"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="admin@gmail.com" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1m9-rL-BBc">
+                                <rect key="frame" x="65" y="77" width="108" height="18"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="18" id="SuC-Ab-ThB"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="11"/>
-                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="9"/>
+                                <color key="textColor" cocoaTouchSystemColor="viewFlipsideBackgroundColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" restorationIdentifier="TableViewCellID" image="default_pic" translatesAutoresizingMaskIntoConstraints="NO" id="53O-dF-h8M">
@@ -69,7 +69,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Overdue" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fsr-d5-eO6">
-                                <rect key="frame" x="279" y="68" width="57" height="21"/>
+                                <rect key="frame" x="279" y="70" width="57" height="21"/>
                                 <color key="backgroundColor" red="0.93725490196078431" green="0.60392156862745094" blue="0.60392156862745094" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="21" id="Dpp-pe-r3n"/>
@@ -86,7 +86,7 @@
                                 </userDefinedRuntimeAttributes>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="DueToday" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="poj-f2-dFs">
-                                <rect key="frame" x="279" y="68" width="58" height="21"/>
+                                <rect key="frame" x="279" y="70" width="58" height="21"/>
                                 <color key="backgroundColor" red="1" green="0.95077534707453004" blue="0.58851132072213463" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="21" id="TfH-Ob-jIP"/>
@@ -101,44 +101,70 @@
                                 </userDefinedRuntimeAttributes>
                             </label>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="0nx-fm-MEX">
-                                <rect key="frame" x="148" y="11" width="13" height="13"/>
+                                <rect key="frame" x="148" y="12" width="12" height="12"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="R81-PE-3kV">
-                                <rect key="frame" x="165" y="11" width="13" height="13"/>
+                                <rect key="frame" x="164" y="12" width="12" height="12"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="d7e-u6-deE">
-                                <rect key="frame" x="182" y="11" width="13" height="13"/>
+                                <rect key="frame" x="180" y="12" width="12" height="12"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="owner" translatesAutoresizingMaskIntoConstraints="NO" id="siu-XN-GBs">
+                                <rect key="frame" x="49" y="79" width="13" height="12"/>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="headfone" translatesAutoresizingMaskIntoConstraints="NO" id="uFH-Uu-d7J">
+                                <rect key="frame" x="174" y="80" width="11" height="11"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="11" id="7ab-pe-dew"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Mallikarjun" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="beW-RO-yLo">
+                                <rect key="frame" x="187" y="77" width="80" height="18"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="9"/>
+                                <color key="textColor" cocoaTouchSystemColor="viewFlipsideBackgroundColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="Ckd-Id-tc5" firstAttribute="firstBaseline" secondItem="XGS-gO-zvq" secondAttribute="firstBaseline" id="1iy-mG-GKc"/>
-                            <constraint firstAttribute="bottom" secondItem="poj-f2-dFs" secondAttribute="bottom" constant="5" id="2nM-6j-Ael"/>
-                            <constraint firstItem="XGS-gO-zvq" firstAttribute="trailing" secondItem="1m9-rL-BBc" secondAttribute="trailing" constant="114" id="5bO-e8-4wx"/>
-                            <constraint firstItem="LPv-Px-QNx" firstAttribute="leading" secondItem="1m9-rL-BBc" secondAttribute="leading" constant="-1" id="6FF-wJ-eFc"/>
+                            <constraint firstAttribute="bottom" secondItem="poj-f2-dFs" secondAttribute="bottom" constant="3" id="2nM-6j-Ael"/>
+                            <constraint firstItem="uFH-Uu-d7J" firstAttribute="bottom" secondItem="siu-XN-GBs" secondAttribute="bottom" id="31o-ob-9na"/>
+                            <constraint firstItem="XGS-gO-zvq" firstAttribute="trailing" secondItem="1m9-rL-BBc" secondAttribute="trailing" constant="165" id="5bO-e8-4wx"/>
+                            <constraint firstItem="LPv-Px-QNx" firstAttribute="leading" secondItem="1m9-rL-BBc" secondAttribute="leading" id="6FF-wJ-eFc"/>
                             <constraint firstItem="53O-dF-h8M" firstAttribute="centerY" secondItem="LPv-Px-QNx" secondAttribute="centerY" constant="-2" id="8Ts-4q-Ye9"/>
                             <constraint firstItem="XGS-gO-zvq" firstAttribute="trailing" secondItem="hCG-1y-fMS" secondAttribute="trailingMargin" constant="-8" id="ADo-mf-Ocg"/>
-                            <constraint firstItem="poj-f2-dFs" firstAttribute="leading" secondItem="1m9-rL-BBc" secondAttribute="trailing" constant="55" id="Gbc-7J-FXb"/>
+                            <constraint firstItem="beW-RO-yLo" firstAttribute="leading" secondItem="uFH-Uu-d7J" secondAttribute="trailing" constant="2" id="F0u-p8-VJi"/>
+                            <constraint firstItem="1m9-rL-BBc" firstAttribute="leading" secondItem="siu-XN-GBs" secondAttribute="trailing" constant="3" id="F7w-hS-fcS"/>
+                            <constraint firstItem="beW-RO-yLo" firstAttribute="baseline" secondItem="1m9-rL-BBc" secondAttribute="baseline" id="FD5-Il-kX3"/>
+                            <constraint firstItem="poj-f2-dFs" firstAttribute="leading" secondItem="1m9-rL-BBc" secondAttribute="trailing" constant="106" id="Gbc-7J-FXb"/>
                             <constraint firstItem="vGf-8H-ojp" firstAttribute="top" secondItem="hCG-1y-fMS" secondAttribute="top" id="Ila-Xg-BjG"/>
                             <constraint firstItem="vGf-8H-ojp" firstAttribute="leading" secondItem="LPv-Px-QNx" secondAttribute="trailing" constant="9" id="LtR-br-fxH"/>
+                            <constraint firstItem="siu-XN-GBs" firstAttribute="centerY" secondItem="1m9-rL-BBc" secondAttribute="centerY" constant="-1" id="NCh-ix-J4K"/>
                             <constraint firstAttribute="trailing" secondItem="vGf-8H-ojp" secondAttribute="trailing" id="SIp-Ih-TMf"/>
+                            <constraint firstItem="siu-XN-GBs" firstAttribute="top" secondItem="LPv-Px-QNx" secondAttribute="bottom" constant="3" id="VEr-01-fz8"/>
                             <constraint firstItem="Ckd-Id-tc5" firstAttribute="leading" secondItem="53O-dF-h8M" secondAttribute="trailing" constant="7" id="VVI-sw-GjK"/>
-                            <constraint firstItem="1m9-rL-BBc" firstAttribute="top" secondItem="LPv-Px-QNx" secondAttribute="bottom" id="Y7e-lF-RXE"/>
+                            <constraint firstItem="1m9-rL-BBc" firstAttribute="top" secondItem="LPv-Px-QNx" secondAttribute="bottom" constant="1" id="Y7e-lF-RXE"/>
                             <constraint firstItem="53O-dF-h8M" firstAttribute="leading" secondItem="hCG-1y-fMS" secondAttribute="leadingMargin" id="ad5-FN-fom"/>
                             <constraint firstItem="Ckd-Id-tc5" firstAttribute="baseline" secondItem="XGS-gO-zvq" secondAttribute="baseline" id="apF-Ly-KkP"/>
                             <constraint firstItem="XGS-gO-zvq" firstAttribute="leading" secondItem="Ckd-Id-tc5" secondAttribute="trailing" constant="35" id="b4g-n5-7vR"/>
-                            <constraint firstItem="1m9-rL-BBc" firstAttribute="bottom" secondItem="hCG-1y-fMS" secondAttribute="bottomMargin" constant="8" id="g0y-3C-i8j"/>
-                            <constraint firstItem="fsr-d5-eO6" firstAttribute="leading" secondItem="1m9-rL-BBc" secondAttribute="trailing" constant="55" id="gyW-av-zIG"/>
+                            <constraint firstItem="1m9-rL-BBc" firstAttribute="bottom" secondItem="hCG-1y-fMS" secondAttribute="bottomMargin" constant="9" id="g0y-3C-i8j"/>
+                            <constraint firstItem="fsr-d5-eO6" firstAttribute="leading" secondItem="1m9-rL-BBc" secondAttribute="trailing" constant="106" id="gyW-av-zIG"/>
                             <constraint firstAttribute="bottom" secondItem="vGf-8H-ojp" secondAttribute="bottom" id="hDL-Fh-hR9"/>
+                            <constraint firstItem="uFH-Uu-d7J" firstAttribute="centerY" secondItem="1m9-rL-BBc" secondAttribute="centerY" constant="-1" id="i9i-AK-twv"/>
                             <constraint firstItem="Ckd-Id-tc5" firstAttribute="top" secondItem="hCG-1y-fMS" secondAttribute="topMargin" id="lsp-c0-o7d"/>
                             <constraint firstItem="vGf-8H-ojp" firstAttribute="leading" secondItem="fsr-d5-eO6" secondAttribute="trailing" constant="8" id="mba-p1-19I"/>
                             <constraint firstItem="Ckd-Id-tc5" firstAttribute="leading" secondItem="LPv-Px-QNx" secondAttribute="leading" id="ntY-Oq-wxl"/>
                             <constraint firstItem="LPv-Px-QNx" firstAttribute="top" secondItem="Ckd-Id-tc5" secondAttribute="bottom" constant="-6" id="pAj-e5-p4F"/>
+                            <constraint firstItem="beW-RO-yLo" firstAttribute="firstBaseline" secondItem="1m9-rL-BBc" secondAttribute="firstBaseline" id="q9V-2h-WXE"/>
                             <constraint firstItem="53O-dF-h8M" firstAttribute="centerY" secondItem="hCG-1y-fMS" secondAttribute="centerY" id="r47-Cr-pLN"/>
-                            <constraint firstItem="fsr-d5-eO6" firstAttribute="top" secondItem="1m9-rL-BBc" secondAttribute="top" constant="-8" id="zJc-wL-j8n"/>
+                            <constraint firstItem="uFH-Uu-d7J" firstAttribute="leading" secondItem="1m9-rL-BBc" secondAttribute="trailing" constant="1" id="xHG-OH-VUX"/>
+                            <constraint firstItem="fsr-d5-eO6" firstAttribute="leading" secondItem="beW-RO-yLo" secondAttribute="trailing" constant="12" id="yV5-mb-iz6"/>
+                            <constraint firstItem="fsr-d5-eO6" firstAttribute="top" secondItem="1m9-rL-BBc" secondAttribute="top" constant="-7" id="zJc-wL-j8n"/>
+                            <constraint firstItem="siu-XN-GBs" firstAttribute="leading" secondItem="LPv-Px-QNx" secondAttribute="leading" constant="-16" id="zaL-Io-xIP"/>
                         </constraints>
                     </view>
                 </subviews>
@@ -150,6 +176,7 @@
                 </constraints>
             </tableViewCellContentView>
             <connections>
+                <outlet property="agentLabel" destination="beW-RO-yLo" id="YrV-GL-Qij"/>
                 <outlet property="attachImgView" destination="d7e-u6-deE" id="agH-vC-SAb"/>
                 <outlet property="ccImgView" destination="R81-PE-3kV" id="6fQ-IU-Hmt"/>
                 <outlet property="indicationView" destination="vGf-8H-ojp" id="acd-h5-eGs"/>
@@ -161,6 +188,7 @@
                 <outlet property="ticketSubLabel" destination="LPv-Px-QNx" id="pJX-Q4-n3U"/>
                 <outlet property="timeStampLabel" destination="XGS-gO-zvq" id="vgK-1s-hh7"/>
                 <outlet property="today" destination="poj-f2-dFs" id="dlr-gi-R2s"/>
+                <outlet property="viewMain" destination="hCG-1y-fMS" id="XJO-iO-6Rx"/>
             </connections>
             <point key="canvasLocation" x="345" y="104"/>
         </tableViewCell>
@@ -186,8 +214,18 @@
             <rect key="frame" x="0.0" y="0.0" width="20" height="20"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
         </imageView>
+        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ashfaque.hussian@eigroup.co.in" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Czh-Pq-Z19">
+            <rect key="frame" x="0.0" y="0.0" width="108" height="18"/>
+            <constraints>
+                <constraint firstAttribute="height" constant="18" id="z1n-V5-XhU"/>
+            </constraints>
+            <fontDescription key="fontDescription" type="system" pointSize="11"/>
+            <nil key="highlightedColor"/>
+        </label>
     </objects>
     <resources>
         <image name="default_pic" width="96" height="96"/>
+        <image name="headfone" width="512" height="512"/>
+        <image name="owner" width="512" height="512"/>
     </resources>
 </document>
