--- a/Faveo Helpdesk Pro/Base.lproj/ConversationTableViewCell.xib
+++ b/Faveo Helpdesk Pro/Base.lproj/ConversationTableViewCell.xib
@@ -55,7 +55,7 @@
                                 <subviews>
                                     <webView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="o7C-eZ-Ufg">
                                         <rect key="frame" x="1" y="1" width="308" height="150.5"/>
-                                        <color key="backgroundColor" red="0.36078431370000003" green="0.38823529410000002" blue="0.4039215686" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                     </webView>
                                 </subviews>
                                 <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
